--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preload" as="image" href="/src/assets/Component 2.png" />
+    <link rel="preload" as="image" href="/src/assets/Component 2.webp"  type="image/webp" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
